# proyecto-TFG

./: .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml
.github/workflows/: latex.yml  lint.yml  tests.yml
data/: adornos_exteriores.json  catalogo_demo.json  catalogo_scraping.json  mapeo_esmaltes.json  muebles.json
doc/: .textidote  bibliografia.bib  diccionario.txt  proyecto.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
doc/secciones/: 01_introduccion.tex  02_estado_del_arte.tex  03_planificacion.tex  04_analisis.tex  05_implementacion.tex  06_costes.tex  07_conclusiones.tex
heraldica/: adorno.py  busqueda_esmalte.py  campo.py  catalogo.py  escudo.py  esmalte.py  mueble.py  scripts.py  ui_catalogo.py  ui_web.py
heraldica/db/: models.py  session.py
heraldica/templates/: base.html  index.html  resultados.html
proyecto_tfg/: busqueda.py  catalogo.py  escudo.py  esmalte.py
proyectotfg/: catalogo.py  escudo.py
scripts/: importar_json_db.py  scraping_escudos.py
src/: campo.py  escudo.py  esmalte.py
tests/: test_busqueda_esmalte.py  test_campo.py  test_carga_y_busqueda.py  test_catalogo.py  test_catalogo_singleton.py  test_escudo.py  test_esmalte.py  test_smoke_db.py  test_ui_catalogo.py  test_ui_estructura.py
