[project]
name = "proyecto-tfg"
version = "0.1.0"
description = ""
authors = [
    {name = "Luzía",email = "luciaglsn@correo.ugr.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
